[package]
name = "oscore"
version = "0.1.0"
authors = ["Martin Disch <martindisch@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.97", default-features = false, features = ["derive", "alloc"] }
serde_cbor = { git = "https://github.com/martindisch/cbor", rev = "2c7ed27f0ecf89cdf2883586ad40dde1f216df6e", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11.1", default-features = false, features = ["alloc"] }
x25519-dalek = { version = "0.5.2", default-features = false, features = ["u32_backend"] }
ed25519-dalek = { version = "0.9.1", default-features = false, features = ["u32_backend"] }
sha2 = { version = "0.8.0", default-features = false }
aes-ccm = { version = "0.3.0", default-features = false }
hkdf = "0.8.0"
digest = "0.8.1"
coap-lite = { version = "0.3.0", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_cbor/std",
    "serde_bytes/std",
    "x25519-dalek/std",
    # Add this back in once it doesn't cause problems with thread_rng
    # "ed25519-dalek/std",
    "sha2/std",
    "aes-ccm/std",
    "hkdf/std",
    "digest/std",
    "coap-lite/std",
]
